# mandelbrot

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
.local/: .gitignore
cmake/: FindGMP.cmake
config/: .gitignore
src/: CMakeLists.txt  app.c  app.h  color.c  color.h  data.c  data.h  getopt.c  getopt.h  json.c  json.h  key.c  key.h  log.c  log.h  main.c  num.c  num.h  palette.c  palette.h  settings.c  settings.h  sys.c  sys.h  util.c  util.h  video.c  video.h  view.c  view.h
src/app/: app.c  app.h  data.c  data.h  key.c  key.h  settings.c  settings.h  video.c  video.h
src/data/: chunk.c  chunk.h  image.c  image.h  pixel.c  pixel.h
src/net/: connection.c  connection.h  package.c  package.h
src/net/package/: settings.c  settings.h  string.c  string.h
src/util/: getopt.c  getopt.h  json.c  json.h  log.c  log.h  mpf.c  mpf.h  num.c  num.h  sys.c  sys.h  util.c  util.h
src/visuals/: color.c  color.h  palette.c  palette.h  view.c  view.h
tests/: CMakeLists.txt  test_color.c  tests.sh
tests/app/: test_key.c  test_settings.c
tests/data/: test_chunk.c  test_pixel.c
tests/net/: test_connection.c  test_package.c
tests/util/: test_json.c  test_mpf.c  test_num.c  test_sys.c  test_util.c
tests/visuals/: test_color.c  test_palette.c
